--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.0"
+core = "12.1.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -13,8 +14,10 @@ lifecycleViewmodelKtx = "2.8.0"
 materialVersion = "1.11.0"
 mpandroidchart = "v3.1.0"
 navigationFragmentKtx = "2.7.7"
+navigationFragmentKtxVersion = "2.5.3"
 navigationUiKtx = "2.7.7"
 cardview = "1.0.0"
+navigationUiKtxVersion = "2.5.3"
 viewpager2 = "1.1.0"
 williamchart = "3.10.1"
 playServicesMaps = "18.2.0"
@@ -25,7 +28,10 @@ kotlinParcelize = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-navigation-fragment-ktx-v253 = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtxVersion" }
+androidx-navigation-ui-ktx-v253 = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtxVersion" }
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
+core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
